changed repo structure

--- a/notebooks/01_eodag_search.ipynb
+++ b/notebooks/01_eodag_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,7 @@
     "import matplotlib.image as mpimg\n",
     "import numpy as np\n",
     "import folium\n",
+    "import yaml\n",
     "\n",
     "from eodag import EODataAccessGateway\n",
     "from eodag import setup_logging\n",
@@ -42,37 +43,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Get Secrets from .env File\n",
-    "secrets = dotenv_values('.env')"
+    "# Define all paths in paths.yml file. \n",
+    "with open(\"paths.yml\", 'r') as f:\n",
+    "    paths = yaml.safe_load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Get Secrets from .env File\n",
+    "secrets = dotenv_values(paths['credentials'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Folder already exists: c:\\Users\\npikall\\eodag\\eodag-workflows\\data\\eodag-downloads\n",
+      "Folder already exists: c:\\Users\\npikall\\eodag\\eodag-workflows\\data\\eodag-serialize\n",
+      "Folder already exists: c:\\Users\\npikall\\eodag\\eodag-workflows\\data\\eodag-postprocess\n",
+      "Folder already exists: c:\\Users\\npikall\\eodag\\eodag-workflows\\data\\shapefiles\n"
+     ]
+    }
+   ],
+   "source": [
     "#Create Folders for saving Data, serializing and post processing.\n",
     "\n",
-    "# Path where the Data should be stored ('c:\\\\Users\\\\theUSER\\\\eodag-data')\n",
-    "root = '../eodag-data/'\n",
+    "workspaces = [paths['download'], paths['serialize'], paths['post'], paths['shapefiles']]\n",
     "\n",
-    "workspace_download = os.path.join(root,'eodag_workspace_download')\n",
-    "workspace_serialize = os.path.join(root,'eodag_workspace_serialize_deserialize')\n",
-    "workspace_post_process = os.path.join(root,'eodag_workspace_post_process')\n",
-    "workspaces = [workspace_download, workspace_serialize, workspace_post_process]\n",
-    "\n",
-    "for ws in workspaces:\n",
-    "    ws = os.path.abspath(ws)\n",
-    "    \n",
+    "for ws in workspaces:    \n",
     "    if not os.path.isdir(ws):\n",
+    "        ws = os.path.abspath(ws)\n",
     "        os.mkdir(ws)\n",
     "        print(f'Created Folder: {ws}')\n",
     "    else:\n",
+    "        ws = os.path.abspath(ws)\n",
     "        print(f'Folder already exists: {ws}')"
    ]
   },
@@ -100,7 +117,7 @@
     "dag.update_providers_config(f\"\"\"\n",
     "    cop_dataspace:\n",
     "        download:\n",
-    "            outputs_prefix: {os.path.abspath(workspace_download)}\n",
+    "            outputs_prefix: {os.path.abspath(paths['download'])}\n",
     "        auth:\n",
     "            credentials:\n",
     "                username: {secrets['USER_KEY']}\n",
