--- a/notebooks/01_eodag_search.ipynb
+++ b/notebooks/01_eodag_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,13 @@
     "import matplotlib.image as mpimg\n",
     "import numpy as np\n",
     "import folium\n",
-    "import yaml\n",
     "\n",
     "from eodag import EODataAccessGateway\n",
     "from eodag import setup_logging\n",
     "from eodag.crunch import FilterProperty\n",
     "from eodag import SearchResult\n",
     "\n",
-    "from dotenv import dotenv_values\n",
+    "from eotools.shortcut import prepare\n",
     "\n",
     "# Setup Verbose Values:\n",
     "# 0: no logging and no progress bar\n",
@@ -43,54 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define all paths in paths.yml file. \n",
-    "with open(\"paths.yml\", 'r') as f:\n",
-    "    paths = yaml.safe_load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Get Secrets from .env File\n",
-    "secrets = dotenv_values(paths['credentials'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Folder already exists: c:\\Users\\npikall\\eodag\\eodag-workflows\\data\\eodag-downloads\n",
-      "Folder already exists: c:\\Users\\npikall\\eodag\\eodag-workflows\\data\\eodag-serialize\n",
-      "Folder already exists: c:\\Users\\npikall\\eodag\\eodag-workflows\\data\\eodag-postprocess\n",
-      "Folder already exists: c:\\Users\\npikall\\eodag\\eodag-workflows\\data\\shapefiles\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Create Folders for saving Data, serializing and post processing.\n",
-    "\n",
-    "workspaces = [paths['download'], paths['serialize'], paths['post'], paths['shapefiles']]\n",
-    "\n",
-    "for ws in workspaces:    \n",
-    "    if not os.path.isdir(ws):\n",
-    "        ws = os.path.abspath(ws)\n",
-    "        os.mkdir(ws)\n",
-    "        print(f'Created Folder: {ws}')\n",
-    "    else:\n",
-    "        ws = os.path.abspath(ws)\n",
-    "        print(f'Folder already exists: {ws}')"
+    "# Get Credentials from .env file and make dirs from paths.yml\n",
+    "secrets, paths = prepare()"
    ]
   },
   {
@@ -313,7 +270,7 @@
     "# 4. Serialize (Save the filtered products as a GeoJSON File \n",
     "#               to save the state of a search and restore it later)\n",
     "\n",
-    "output_file = os.path.join(workspace_serialize, \"search_results3.geojson\")\n",
+    "output_file = os.path.join(paths['serialize'], \"search_results.geojson\")\n",
     "\n",
     "dag.serialize(\n",
     "    online_products,\n",
