--- a/notebooks/01_eodag_search.ipynb
+++ b/notebooks/01_eodag_search.ipynb
@@ -18,7 +18,8 @@
     "from eodag.crunch import FilterProperty\n",
     "from eodag import SearchResult\n",
     "\n",
-    "from eotools.shortcut import prepare\n",
+    "import yaml\n",
+    "from dotenv import dotenv_values\n",
     "\n",
     "# Setup Verbose Values:\n",
     "# 0: no logging and no progress bar\n",
@@ -35,9 +36,9 @@
    "source": [
     "# EODAG - Search\n",
     "\n",
-    "EODAG (Earth Observation Data Access Gateway) is a command line tool and a Python package for searching and downloading remotely sensed images while offering a unified API for data access regardless of the data provider.\n",
+    "This Notebook is intended to demonstrate how to search for Sentinel 2 products and how to filter the search result useing EODAG.\n",
     "\n",
-    "EODAG gives you an easy way to access products from more than 10 providers, with more than 50 different product types (Sentinel 1, Sentinel 2, Sentinel 3, Landsat, etc.) that can be searched and downloaded."
+    "EODAG (Earth Observation Data Access Gateway) is a command line tool and a Python package for searching and downloading remotely sensed images while offering a unified API for data access regardless of the data provider. EODAG gives you an easy way to access products from more than 10 providers, with more than 50 different product types (Sentinel 1, Sentinel 2, Sentinel 3, Landsat, etc.) that can be searched and downloaded."
    ]
   },
   {
@@ -47,7 +48,25 @@
    "outputs": [],
    "source": [
     "# Get Credentials from .env file and make dirs from paths.yml\n",
-    "secrets, paths = prepare()"
+    "# These functions will be shortend with some python script  in the other notebooks to ensure shorter more readable notebooks.\n",
+    "\n",
+    "# Get Paths from yaml file \n",
+    "with open(\"paths.yml\", \"r\") as f:\n",
+    "    paths = yaml.safe_load(f)\n",
+    "\n",
+    "# Get Secrets from .env File (defined in paths.yml)\n",
+    "secrets = dotenv_values(paths['credentials'])\n",
+    "\n",
+    "# Create Directories for future data storage\n",
+    "directories = [paths['download'], paths['serialize'], paths['post'], paths['shapefiles']]\n",
+    "for d in directories:\n",
+    "    if not os.path.isdir(d):\n",
+    "        abspath = os.path.abspath(d)\n",
+    "        os.mkdir(abspath)\n",
+    "        print(f'Made Dir: {abspath}')\n",
+    "    else:\n",
+    "        abspath = os.path.abspath(d)\n",
+    "        print(f'Dir exists: {abspath}')"
    ]
   },
   {
@@ -65,7 +84,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. Configure\n",
     "#Create EODAG Object and set preferred Provider\n",
     "\n",
     "dag = EODataAccessGateway()\n",
@@ -74,7 +92,7 @@
     "dag.update_providers_config(f\"\"\"\n",
     "    cop_dataspace:\n",
     "        download:\n",
-    "            outputs_prefix: {os.path.abspath(paths['download'])}\n",
+    "            outputs_prefix: {os.path.abspath(ws_paths['download'])}\n",
     "        auth:\n",
     "            credentials:\n",
     "                username: {secrets['USER_KEY']}\n",
@@ -97,7 +115,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. Search \n",
     "#Set Search Parameters and get catalog of products\n",
     "\n",
     "latmin, latmax = 47.86, 48.407\n",
@@ -124,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Folium Map\n",
+    "# Folium Map to display the search results\n",
     "fmap = folium.Map(location=(np.array([latmin, latmax]).mean(), np.array([lonmin, lonmax]).mean()), zoom_start=9)\n",
     "folium.Rectangle(bounds=[[latmin, lonmin],[latmax, lonmax]], color=\"red\").add_to(fmap)\n",
     "folium.GeoJson(\n",
@@ -169,9 +186,9 @@
    "source": [
     "## Step 3\n",
     "### Crunch\n",
-    "Crunching as defined in eodag is a way to filter the EO products contained in a SearchResult object. Several filters are available and further described in this document.\n",
+    "Crunching as defined in eodag is a way to filter the EO products contained in a SearchResult object. Several filters are available.\n",
     "\n",
-    "A SearchResult has a crunch() method that requires a filter instance as an argument, itself initialized with a dictionary that contains the required parameters. According to the filter used, some more kwargs may need to be passed to crunch(). The filters return a list of EOProducts.\n",
+    "A SearchResult has a crunch() method that requires a filter instance as an argument, itself is initialized with a dictionary that contains the required parameters. According to the filter used, some more kwargs may need to be passed to crunch(). The filters return a list of EOProducts.\n",
     "\n",
     "The following Filter Options are available (Note `sr` is the search result):\n",
     "- Filter by start and end date (`sr.filter_date()` or import `FilterDate` from eodag.crunch)\n",
@@ -179,8 +196,8 @@
     "- Filter by property (`FilterProperty`)\n",
     "- Filter for online products (`sr.filter_online()` or `FilterProperty`)\n",
     "- Filter the latest products intersecting a geometry (`sr.filter_latest_intersect()` or `FilterLatestIntersect`)\n",
-    "\n",
-    "\n"
+    " \n",
+    " Have a look at this [website from eodag](https://eodag.readthedocs.io/en/stable/notebooks/api_user_guide/6_crunch.html) to find some more specific examples for crunching operations."
    ]
   },
   {
@@ -200,8 +217,8 @@
     "online_products = filtered_products.filter_online()\n",
     "print(f\"{len(filtered_products) - len(online_products)} from {len(online_products)} products are offline and have been filtered out.\")\n",
     "\n",
-    "plot_quicklooks(online_products)\n",
-    "\n"
+    "# Plot Quicklooks of Filtered Products\n",
+    "plot_quicklooks(online_products)"
    ]
   },
   {
@@ -212,9 +229,7 @@
     "\n",
     "In order to have some more speciffic filtering operations at hand we can use the Nameing Convention, which stores a lot of information about the individual products. This enables us to filter for things like the relative orbits, the Tile Numbers or the processing baseline. \n",
     "\n",
-    "#### Compact Naming Convention\n",
-    "\n",
-    "The compact naming convention is arranged as follows:\n",
+    "The compact naming convention for Sentinel 2 products is arranged as follows:\n",
     "\n",
     "``MMM_MSIXXX_YYYYMMDDHHMMSS_Nxxyy_ROOO_Txxxxx_< Product Discriminator >.SAFE``\n",
     "\n",
@@ -276,6 +291,13 @@
     "    online_products,\n",
     "    filename=output_file\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To actually work with the Data check out the other Notebooks."
    ]
   }
  ],
