--- a/notebooks/02_eodag_des_post.ipynb
+++ b/notebooks/02_eodag_des_post.ipynb
@@ -41,9 +41,7 @@
    "source": [
     "# EODAG - deserialized post process\n",
     "\n",
-    "EODAG (Earth Observation Data Access Gateway) is a command line tool and a Python package for searching and downloading remotely sensed images while offering a unified API for data access regardless of the data provider.\n",
-    "\n",
-    "EODAG gives you an easy way to access products from more than 10 providers, with more than 50 different product types (Sentinel 1, Sentinel 2, Sentinel 3, Landsat, etc.) that can be searched and downloaded."
+    "This Notebook is intended to demonstrate how to deserialize a previously made search and download the data and to work with it."
    ]
   },
   {
@@ -62,8 +60,9 @@
    "outputs": [],
    "source": [
     "# Get Credentials from .env file and make dirs from paths.yml\n",
-    "secrets, paths = prepare(log=False)\n",
-    "dag = configure(secrets=secrets, paths=paths)"
+    "# These functions are just shortcuts from a python script and just help to keep the notebooks short and simple\n",
+    "secrets, ws_paths = prepare(log=False)\n",
+    "dag = configure(secrets=secrets, paths=ws_paths)"
    ]
   },
   {
@@ -82,7 +81,7 @@
    "outputs": [],
    "source": [
     "# Deserialize the Search Results\n",
-    "output_file = os.path.join(paths['serialize'], \"search_results.geojson\")\n",
+    "output_file = os.path.join(ws_paths['serialize'], \"search_results.geojson\")\n",
     "deserialized_search_results = dag.deserialize_and_register(output_file)\n",
     "\n",
     "print(f\"Got {len(deserialized_search_results)} deserialized products.\")"
@@ -173,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example: Simple NDVI Image (as shown by eodag documentation)"
+    "#### Simple NDVI Image"
    ]
   },
   {
@@ -183,7 +182,6 @@
    "outputs": [],
    "source": [
     "# Sorting the search results for reproducibility (sorted by tile(5) and date (2))\n",
-    "\n",
     "products = sorted([p for p in deserialized_search_results], key=lambda p: p.properties[\"title\"].split(\"_\")[5] + p.properties[\"title\"].split(\"_\")[2])"
    ]
   },
@@ -214,25 +212,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Loading Bands as Dataset"
+    "#### More complex datasets\n",
+    "As `EODAG` only has a function to load a single band from a single product into an `xarray` a new function for more complex xarray Datasets is needed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function for loading multiple bands of a product into a single xarray Dataset. Each Band corresponds to a Variable in the dataset.\n",
+    "def load_single_product(product, bands:list[str], params=common_params):\n",
+    "    loaded_data = {}\n",
+    "    for band in bands:\n",
+    "        # Load Band into an xarray Dataarray\n",
+    "        data = product.get_data(band=band, **params)\n",
+    "\n",
+    "        # Get rid of Dimensions of size 1 [e.g.: shapes from (1,300,500) to (300,500)]\n",
+    "        data = data.squeeze()\n",
+    "\n",
+    "        # Get time information from the product properties\n",
+    "        time_str = product.properties['startTimeFromAscendingNode']\n",
+    "        date = dt.datetime.strptime(time_str,'%Y-%m-%dT%H:%M:%S.%f%z')\n",
+    "\n",
+    "        # Add a timestamp to the xarray dataarray (taken from product properties)\n",
+    "        data = data.expand_dims(dim={'time':[date.date()]})\n",
+    "\n",
+    "        # Name the Dataarray (band name is used) -> Dataset uses the Dataarray name to name its variables\n",
+    "        data.name = band\n",
+    "\n",
+    "        # Add Dataarray of a single band to the loaded_data dictionary\n",
+    "        loaded_data[band] = data\n",
+    "    # Create a xarray Dataset from a dictionary of Dataarrays\n",
+    "    ds = xr.Dataset(loaded_data)\n",
+    "    return ds"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Level-2A processing includes a Scene Classification and an Atmospheric Correction applied to Top-Of-Atmosphere (TOA) Level-1C orthoimage products. Level-2A main output is an orthoimage atmospherically corrected, Surface Reflectance product.\n",
-    "\n",
-    "Please be aware that \"Surface Reflectance (SR)\" is a new term that has been introduced to replace the former one: \"Bottom of Atmosphere (BOA) reflectance.\"\n",
-    "\n",
-    "Additional outputs are an Aerosol Optical Thickness (AOT) map, a Water Vapour (WV) map and a Scene Classification (SCL) map together with Quality Indicators (QI) for cloud and snow probabilities at 60 m resolution. Level-2A output image products are resampled and generated with an equal spatial resolution for all bands (10 m, 20 m or 60 m). Standard distributed products contain the envelope of all resolutions in three distinct folders:\n",
-    "\n",
-    "\n",
-    "- 10 m: containing spectral bands 2, 3, 4 , 8, a True Colour Image (TCI) and an AOT and WVP maps resampled from 20 m.\n",
-    "\n",
-    "- 20 m: containing spectral bands 1 - 7, the bands 8A, 11 and 12, a True Colour Image (TCI), a Scene Classification (SCL) map and an AOT and WVP map. The band B8 is omitted as B8A provides more precise spectral information.\n",
-    "\n",
-    "- 60 m: containing all components of the 20 m product resampled to 60 m and additionally the bands 1 and 9, a True Colour Image (TCI), a Scene Classification (SCL) map and an AOT and WVP map. The cirrus band 10 is omitted, as it does not contain surface information."
+    "Now we have a function to load multiple bands into a single Dataset, we can expand on that and make another function, which alows us to load multiple times from a single tile into a Dataset."
    ]
   },
   {
@@ -241,109 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get a list of all available Bands (assets)\n",
-    "def get_assets(root:str, res=60):\n",
-    "    jp2_files = [file for dirs in os.walk(root, topdown=True)\n",
-    "                     for file in dirs[2] if file.endswith(f\"_{res}m.jp2\")]\n",
-    "    assets = [file.split('_')[2] for file in jp2_files if file.startswith('T')]\n",
-    "    return assets\n",
-    "    \n",
-    "    \n",
-    "assets = get_assets(paths[0], res=10)\n",
-    "assets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Functions for loading data into datasets.\n",
-    "\n",
-    "def load_single_product(product, bands:list):\n",
-    "    loaded_data = {}\n",
-    "\n",
-    "    for band in bands:\n",
-    "        data = product.get_data(band=band, **common_params)\n",
-    "        data = data.squeeze()\n",
-    "\n",
-    "        time_str = product.properties['startTimeFromAscendingNode']\n",
-    "        date = dt.datetime.strptime(time_str,'%Y-%m-%dT%H:%M:%S.%f%z')\n",
-    "\n",
-    "        data = data.expand_dims(dim={'time':[date.date()]})\n",
-    "        data.name = band\n",
-    "        loaded_data[band] = data\n",
-    "    ds = xr.Dataset(loaded_data)\n",
-    "    return ds\n",
-    "\n",
-    "def load_multiple_timestamps(products, bands:list):\n",
-    "    single_ds = []\n",
-    "    for product in products:\n",
-    "        single_product = load_single_product(product=product, bands=bands)\n",
-    "        single_ds.append(single_product)\n",
-    "\n",
-    "    ds = xr.merge(single_ds)\n",
-    "    return ds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get all files for just one tile\n",
-    "tile_33UWP = sorted([p for p in products if 'T33UWP' == p.properties['title'].split('_')[5]], key=lambda p: p.properties[\"title\"].split(\"_\")[2])\n",
-    "\n",
-    "print(f'This tile has {len(tile_33UWP)} Timestamps.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Loading multiple Bands into a dataset with multiple Timestamps\n",
-    "bands_to_load = get_assets(paths[0], res=10)[1:-1]\n",
-    "print(bands_to_load)\n",
-    "\n",
-    "ds = load_multiple_timestamps(products=tile_33UWP, bands=bands_to_load)\n",
-    "ds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plotting the True Color Image (TCI)\n",
-    "ds['TCI'].loc[ds['TCI'].time[2]].plot.imshow()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculating the NDVI and adding it to the dataset\n",
-    "ndvi = normalized_difference(ds['B08'], ds['B04'])\n",
-    "ds['NDVI'] = ndvi\n",
-    "ds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Selecting a single timestamp from the dataset\n",
-    "single_img = ds.sel(time=dt.date(2023, 3, 16), method='nearest')\n",
-    "single_img"
+    "# Function for loading multiple datasets"
    ]
   },
   {
