--- a/notebooks/04_eodag_search_post.ipynb
+++ b/notebooks/04_eodag_search_post.ipynb
@@ -24,7 +24,7 @@
     "from rasterio.crs import CRS\n",
     "from rioxarray.merge import merge_arrays\n",
     "\n",
-    "from dotenv import dotenv_values\n",
+    "from eotools.shortcut import prepare, configure, deserialize, plot_quicklooks\n",
     "\n",
     "# Setup Verbose Values:\n",
     "# 0: no logging and no progress bar\n",
@@ -47,42 +47,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Get Secrets from .env File\n",
-    "secrets = dotenv_values('.env')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Create Folders for saving Data, serializing and post processing.\n",
-    "\n",
-    "# Path where the Data should be stored ('c:\\\\Users\\\\theUSER\\\\eodag-data')\n",
-    "root = '../eodag-data/'\n",
-    "\n",
-    "workspace_download = os.path.join(root,'eodag_workspace_download')\n",
-    "workspace_serialize = os.path.join(root,'eodag_workspace_serialize_deserialize')\n",
-    "workspace_post_process = os.path.join(root,'eodag_workspace_post_process')\n",
-    "workspaces = [workspace_download, workspace_serialize, workspace_post_process]\n",
-    "\n",
-    "for ws in workspaces:\n",
-    "    ws = os.path.abspath(ws)\n",
-    "    \n",
-    "    if not os.path.isdir(ws):\n",
-    "        os.mkdir(ws)\n",
-    "        print(f'Created Folder: {ws}')\n",
-    "    else:\n",
-    "        print(f'Folder already exists: {ws}')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -97,21 +61,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. Configure\n",
-    "#Create EODAG Object and set preferred Provider\n",
-    "\n",
-    "dag = EODataAccessGateway()\n",
-    "dag.set_preferred_provider(\"cop_dataspace\") # Copernicus Data Space Ecosystem\n",
-    "\n",
-    "dag.update_providers_config(f\"\"\"\n",
-    "    cop_dataspace:\n",
-    "        download:\n",
-    "            outputs_prefix: {os.path.abspath(workspace_download)}\n",
-    "        auth:\n",
-    "            credentials:\n",
-    "                username: {secrets['USER_KEY']}\n",
-    "                password: {secrets['USER_SECRET']}\n",
-    "\"\"\")"
+    "# Get Credentials from .env file and make dirs from paths.yml\n",
+    "# These functions are just shortcuts from a python script and just help to keep the notebooks short and simple\n",
+    "secrets, ws_paths = prepare(log=False)\n",
+    "dag = configure(secrets=secrets, paths=ws_paths)"
    ]
   },
   {
@@ -173,25 +126,6 @@
    "outputs": [],
    "source": [
     "#Plot Quicklooks of Search Results\n",
-    "def plot_quicklooks(products):\n",
-    "    fig = plt.figure(figsize=(10,8))\n",
-    "    for i, product in enumerate(products[:12]):\n",
-    "        # This line takes care of downloading the quicklook\n",
-    "        quicklook_path = product.get_quicklook()\n",
-    "        \n",
-    "        date = product.properties['startTimeFromAscendingNode'][:16]\n",
-    "        provider = product.provider\n",
-    "        tile = product.properties['title'].split('_')[5].lstrip('T')\n",
-    "    \n",
-    "        # Plot the quicklook\n",
-    "        img = mpimg.imread(quicklook_path)\n",
-    "        ax = fig.add_subplot(3, 4, i+1)\n",
-    "        ax.set_title(f'Product {i}\\n{date}\\n{provider} - {tile}')\n",
-    "        ax.tick_params(top=False, bottom=False, left=False, right=False,\n",
-    "                       labelleft=False, labelbottom=False)\n",
-    "        plt.imshow(img)\n",
-    "    plt.tight_layout()\n",
-    "    \n",
     "plot_quicklooks(search_results)"
    ]
   },
@@ -307,13 +241,6 @@
     "# Plot the NDVI Image\n",
     "NDVI.plot(cmap=\"RdYlGn\", center=False, size=6, aspect='equal')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
