--- a/notebooks/06_eodag_classify.ipynb
+++ b/notebooks/06_eodag_classify.ipynb
@@ -22,7 +22,7 @@
     "from rasterio.crs import CRS\n",
     "from rioxarray.merge import merge_arrays\n",
     "\n",
-    "from dotenv import dotenv_values\n",
+    "from eotools.shortcut import prepare, configure, deserialize, plot_quicklooks\n",
     "\n",
     "import geopandas as gpd\n",
     "from sklearn import svm, tree\n",
@@ -32,10 +32,6 @@
     "from sklearn.metrics import classification_report\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "import matplotlib.colors as colors\n",
-    "\n",
-    "\n",
-    "# from shapely.geometry import MultiPolygon\n",
-    "# from shapely.geometry import shape\n",
     "\n",
     "\n",
     "# Setup Verbose Values:\n",
@@ -59,42 +55,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Get Secrets from .env File\n",
-    "secrets = dotenv_values('.env')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Create Folders for saving Data, serializing and post processing.\n",
-    "\n",
-    "# Path where the Data should be stored ('c:\\\\Users\\\\theUSER\\\\eodag-data')\n",
-    "root = '../eodag-data/'\n",
-    "\n",
-    "workspace_download = os.path.join(root,'eodag_workspace_download')\n",
-    "workspace_serialize = os.path.join(root,'eodag_workspace_serialize_deserialize')\n",
-    "workspace_post_process = os.path.join(root,'eodag_workspace_post_process')\n",
-    "workspaces = [workspace_download, workspace_serialize, workspace_post_process]\n",
-    "\n",
-    "for ws in workspaces:\n",
-    "    ws = os.path.abspath(ws)\n",
-    "    \n",
-    "    if not os.path.isdir(ws):\n",
-    "        os.mkdir(ws)\n",
-    "        print(f'Created Folder: {ws}')\n",
-    "    else:\n",
-    "        print(f'Folder already exists: {ws}')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -109,42 +69,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. Configure\n",
-    "#Create EODAG Object and set preferred Provider\n",
-    "dag = EODataAccessGateway()\n",
-    "dag.set_preferred_provider(\"cop_dataspace\") # Copernicus Data Space Ecosystem\n",
-    "\n",
-    "dag.update_providers_config(f\"\"\"\n",
-    "    cop_dataspace:\n",
-    "        download:\n",
-    "            outputs_prefix: {os.path.abspath(workspace_download)}\n",
-    "        auth:\n",
-    "            credentials:\n",
-    "                username: {secrets['USER_KEY']}\n",
-    "                password: {secrets['USER_SECRET']}\n",
-    "\"\"\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 2\n",
-    "### Deserialize\n",
-    "Since the search is already done (see Notebook `eodag_search`) and the search result has been serialized, we are going to deserialize the search result and register it. If it is only deserialized it won't be able to download the data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Deserialize the Search Results\n",
-    "output_file = os.path.join(workspace_serialize, \"search_results3.geojson\")\n",
-    "deserialized_search_results = dag.deserialize_and_register(output_file)\n",
-    "\n",
-    "print(f\"Got {len(deserialized_search_results)} deserialized products.\")"
+    "# Get Credentials from .env file and make dirs from paths.yml\n",
+    "# These functions are just shortcuts from a python script and just help to keep the notebooks short and simple\n",
+    "secrets, ws_paths = prepare(log=False)\n",
+    "dag = configure(secrets=secrets, ws_paths=ws_paths)\n",
+    "deserialized_search_results = deserialize(filepath=\"search_results.geojson\", ws_path=ws_paths, dag=dag, log=True)"
    ]
   },
   {
@@ -154,25 +83,6 @@
    "outputs": [],
    "source": [
     "#Plot Quicklooks of Search Results\n",
-    "def plot_quicklooks(products):\n",
-    "    fig = plt.figure(figsize=(10,8))\n",
-    "    for i, product in enumerate(products[:12]):\n",
-    "        # This line takes care of downloading the quicklook\n",
-    "        quicklook_path = product.get_quicklook()\n",
-    "        \n",
-    "        date = product.properties['startTimeFromAscendingNode'][:16]\n",
-    "        provider = product.provider\n",
-    "        tile = product.properties['title'].split('_')[5].lstrip('T')\n",
-    "    \n",
-    "        # Plot the quicklook\n",
-    "        img = mpimg.imread(quicklook_path)\n",
-    "        ax = fig.add_subplot(3, 4, i+1)\n",
-    "        ax.set_title(f'Product {i}\\n{date}\\n{provider} - {tile}')\n",
-    "        ax.tick_params(top=False, bottom=False, left=False, right=False,\n",
-    "                       labelleft=False, labelbottom=False)\n",
-    "        plt.imshow(img)\n",
-    "    plt.tight_layout()\n",
-    "    \n",
     "plot_quicklooks(deserialized_search_results)"
    ]
   },
@@ -336,17 +246,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for idx, elem in enumerate(assets):\n",
-    "    filepath = product.driver.get_data_address(product, band=elem).split('\\\\')[-5:]\n",
-    "    print(idx, filepath)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Loading multiple Bands into a dataset\n",
     "ds = load_single_product(product=product, bands=assets)\n",
     "ds"
@@ -367,6 +266,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define Functions to prepare the dataset for classification\n",
+    "\n",
     "def geojson_to_polygon(path:str) -> list:\n",
     "    '''\n",
     "    Reads a geojson File and returns a List of Polygons \n",
@@ -410,6 +311,16 @@
     "    clipped = ds.rio.clip(polygons, invert=False, all_touched=False, drop=True)\n",
     "    clipped_nan = clipped.where(clipped == ds)\n",
     "    return clipped_nan\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define Functions to prepare the dataset for classification\n",
     "\n",
     "def preprocess_data_to_classify(ds:xr.Dataset, feature_path:str, nonfeature_path:str, bands:list=None) -> list:\n",
     "    '''\n",
@@ -488,8 +399,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_forest = r'..\\eodag-data\\shpfiles\\forest.geojson'\n",
-    "path_nonforest = r'..\\eodag-data\\shpfiles\\nonforest.geojson'"
+    "path_forest = '../data/shapefiles/forest.geojson'\n",
+    "path_nonforest = '../data/shapefiles/nonforest.geojson'"
    ]
   },
   {
@@ -683,7 +594,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "single_img['NDVI'].plot.imshow()"
+    "single_img['NDVI'].plot.imshow(cmap='RdYlGn')"
    ]
   },
   {
