--- a/notebooks/05_eodag_merging.ipynb
+++ b/notebooks/05_eodag_merging.ipynb
@@ -22,7 +22,7 @@
     "from rasterio.crs import CRS\n",
     "from rioxarray.merge import merge_arrays\n",
     "\n",
-    "from dotenv import dotenv_values\n",
+    "from eotools.shortcut import prepare, configure, deserialize\n",
     "\n",
     "# Setup Verbose Values:\n",
     "# 0: no logging and no progress bar\n",
@@ -45,42 +45,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Get Secrets from .env File\n",
-    "secrets = dotenv_values('.env')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Create Folders for saving Data, serializing and post processing.\n",
-    "\n",
-    "# Path where the Data should be stored ('c:\\\\Users\\\\theUSER\\\\eodag-data')\n",
-    "root = '../eodag-data/'\n",
-    "\n",
-    "workspace_download = os.path.join(root,'eodag_workspace_download')\n",
-    "workspace_serialize = os.path.join(root,'eodag_workspace_serialize_deserialize')\n",
-    "workspace_post_process = os.path.join(root,'eodag_workspace_post_process')\n",
-    "workspaces = [workspace_download, workspace_serialize, workspace_post_process]\n",
-    "\n",
-    "for ws in workspaces:\n",
-    "    ws = os.path.abspath(ws)\n",
-    "    \n",
-    "    if not os.path.isdir(ws):\n",
-    "        os.mkdir(ws)\n",
-    "        print(f'Created Folder: {ws}')\n",
-    "    else:\n",
-    "        print(f'Folder already exists: {ws}')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -94,46 +58,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. Configure\n",
-    "#Create EODAG Object and set preferred Provider\n",
-    "dag = EODataAccessGateway()\n",
-    "dag.set_preferred_provider(\"cop_dataspace\") # Copernicus Data Space Ecosystem\n",
-    "\n",
-    "dag.update_providers_config(f\"\"\"\n",
-    "    cop_dataspace:\n",
-    "        download:\n",
-    "            outputs_prefix: {os.path.abspath(workspace_download)}\n",
-    "        auth:\n",
-    "            credentials:\n",
-    "                username: {secrets['USER_KEY']}\n",
-    "                password: {secrets['USER_SECRET']}\n",
-    "\"\"\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Deserialize the Search Results\n",
-    "output_file = os.path.join(workspace_serialize, \"search_results.geojson\")\n",
-    "deserialized_search_results = dag.deserialize_and_register(output_file)\n",
-    "\n",
-    "print(f\"Got {len(deserialized_search_results)} deserialized products.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
+    "# Get Credentials from .env file and make dirs from paths.yml\n",
+    "# These functions are just shortcuts from a python script and just help to keep the notebooks short and simple\n",
+    "secrets, ws_paths = prepare(log=False)\n",
+    "dag = configure(secrets=secrets, paths=ws_paths)\n",
+    "deserialized_search_results = deserialize(filepath=\"search_results.geojson\", ws_path=ws_paths, dag=dag, log=True)\n",
     "\n",
     "# Download multiple Products\n",
     "products = deserialized_search_results\n",
-    "paths = dag.download_all(products)\n"
+    "paths = dag.download_all(products)"
    ]
   },
   {
@@ -151,7 +84,7 @@
     "fmap = folium.Map(location=(np.array([latmin, latmax]).mean(), np.array([lonmin, lonmax]).mean()), zoom_start=9)\n",
     "folium.Rectangle(bounds=[[latmin, lonmin],[latmax, lonmax]], color=\"red\").add_to(fmap)\n",
     "folium.GeoJson(\n",
-    "    data=deserialized_search_results[:],  # SearchResult has a __geo_interface__ interface used by folium to get its GeoJSON representation, single results dont work (this [2:3] instead of [2])\n",
+    "    data=products[:],  # SearchResult has a __geo_interface__ interface used by folium to get its GeoJSON representation, single results dont work (this [2:3] instead of [2])\n",
     "    tooltip=folium.GeoJsonTooltip(fields=[\"title\"])\n",
     ").add_to(fmap)\n",
     "fmap"
